Fix contrast in +3 buttons.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,8 +154,8 @@ button {
 }
 
 .btn-3p {
-  color: red;
-  border: 3px solid red;
+  color: #dd0000;
+  border: 3px solid #dd0000;
   order: 1;
 }
 
@@ -174,7 +174,7 @@ button {
 }
 
 .btn-3p:hover {
-  background-color: red;
+  background-color: #dd0000;
   color: #fff;
   font-weight: bold;
   border: 3px solid #fff;
